tests/fixtures/errors/while_cond_not_bool.ore
fn main
  while "yes"
    print "loop"
